--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
+    "boostrap": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
