--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@popperjs/core": "^2.11.8",
     "@react-google-maps/api": "^2.18.1",
     "axios": "^1.3.6",
-    "bootstrap": "^5.2.3",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.0",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
